--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,6 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="0dp"
-            app:layout_constraintWidth_percent="0.4"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_half"
             android:background="@color/colorAccentLight"
@@ -37,25 +36,26 @@
             app:layout_constraintBottom_toTopOf="@id/constraint_measurements"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/texture_view"
-            app:layout_constraintVertical_bias="1">
+            app:layout_constraintVertical_bias="1"
+            app:layout_constraintWidth_percent="0.4">
 
             <TextView
                 android:id="@+id/txt_result_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_half"
-                app:layout_constraintTop_toTopOf="parent"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@id/txt_result_2"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 tools:text="Zebra" />
 
             <TextView
                 android:id="@+id/txt_result_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_small"
                 android:layout_marginStart="@dimen/margin_half"
+                android:layout_marginTop="@dimen/margin_small"
                 app:layout_constraintBottom_toTopOf="@id/txt_result_3"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/txt_result_1"
@@ -64,9 +64,9 @@
             <TextView
                 android:id="@+id/txt_result_3"
                 android:layout_width="wrap_content"
-                android:layout_marginTop="@dimen/margin_small"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_half"
+                android:layout_marginTop="@dimen/margin_small"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/txt_result_2"
@@ -125,6 +125,46 @@
                 app:layout_constraintStart_toEndOf="@id/txt_inference_last_label"
                 app:layout_constraintTop_toTopOf="@id/txt_inference_last_label"
                 tools:text="132 ms" />
+
+            <TextView
+                android:id="@+id/txt_image_size_average_label"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_small"
+                android:text="@string/detection_image_size_average"
+                app:layout_constraintEnd_toStartOf="@id/txt_inference_last"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/txt_inference_last_label" />
+
+            <TextView
+                android:id="@+id/txt_image_size_average"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="@id/txt_image_size_average_label"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/txt_image_size_average_label"
+                app:layout_constraintTop_toTopOf="@id/txt_image_size_average_label"
+                tools:text="536 Kb" />
+
+            <TextView
+                android:id="@+id/txt_last_image_size_label"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_small"
+                android:text="@string/detection_image_size_last"
+                app:layout_constraintEnd_toStartOf="@id/txt_inference_last"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/txt_image_size_average_label" />
+
+            <TextView
+                android:id="@+id/txt_last_image_size"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="@id/txt_last_image_size_label"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/txt_last_image_size_label"
+                app:layout_constraintTop_toTopOf="@id/txt_last_image_size_label"
+                tools:text="536 Kb" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
