--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -50,10 +50,11 @@
 
                 <TextView
                     android:id="@+id/txt_resolution"
-                    style="@style/TextLabelStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margin_small"
                     android:text="@string/setup_image_resolution"
+                    android:textColor="@color/colorGrayLabel"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -73,13 +74,13 @@
                     android:id="@+id/seek_max_detections"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_default"
+                    android:layout_marginTop="@dimen/margin_medium"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/txt_resolution"
                     app:maxValue="@integer/detection_limit_max"
                     app:minValue="@integer/detection_limit_min"
-                    app:progress="@{vm.maxDetectionsLive}"
+                    app:progress="@{vm.settingsLive.maxDetections}"
                     app:progressListener="@{(progress) -> vm.onMaxDetectionLimitChange(progress)}"
                     app:stepSize="@integer/detection_step_size"
                     app:text="@string/setup_max_detections" />
@@ -88,25 +89,41 @@
                     android:id="@+id/seek_confidence_threshold"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_default"
+                    android:layout_marginTop="@dimen/margin_medium"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/seek_max_detections"
                     app:maxValue="@integer/confidence_limit_max"
                     app:minValue="@integer/confidence_limit_min"
-                    app:progress="@{vm.confidenceThresholdLive}"
+                    app:progress="@{vm.settingsLive.confidenceThreshold}"
                     app:progressListener="@{(progress) -> vm.onConfidenceThresholdChange(progress)}"
                     app:stepSize="@integer/confidence_step_size"
                     app:text="@string/setup_confidence_threshold" />
+
+                <com.example.camera.utils.view.SeekBarCompositeView
+                    android:id="@+id/seek_image_quality"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margin_medium"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/seek_confidence_threshold"
+                    app:maxValue="@integer/image_quality_max"
+                    app:minValue="@integer/image_quality_min"
+                    app:progress="@{vm.settingsLive.imageQuality}"
+                    app:progressListener="@{(progress) -> vm.onImageQualityChange(progress)}"
+                    app:stepSize="@integer/image_quality_step_size"
+                    app:text="@string/setup_image_quality" />
 
                 <TextView
                     android:id="@+id/txt_inference_type"
                     style="@style/TextLabelStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margin_medium"
                     android:text="@string/setup_inference_type"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/seek_confidence_threshold" />
+                    app:layout_constraintTop_toBottomOf="@id/seek_image_quality" />
 
                 <TextView
                     android:id="@+id/txt_inference_local"
@@ -141,7 +158,7 @@
                     android:id="@+id/text_input_ip_address"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_default"
+                    android:layout_marginTop="@dimen/margin_medium"
                     android:layout_marginEnd="@dimen/margin_default"
                     android:theme="@style/TextInputLayoutAppearance"
                     app:layout_constraintEnd_toStartOf="@id/text_input_port"
