--- a/app/src/main/res/values/app_integer_constants.xml
+++ b/app/src/main/res/values/app_integer_constants.xml
@@ -6,4 +6,7 @@
     <integer name="confidence_limit_min">30</integer>
     <integer name="confidence_limit_max">100</integer>
     <integer name="confidence_step_size">10</integer>
+    <integer name="image_quality_min">0</integer>
+    <integer name="image_quality_max">100</integer>
+    <integer name="image_quality_step_size">10</integer>
 </resources>
